Configuração do github pages

--- a/my-app/package.json
+++ b/my-app/package.json
@@ -17,7 +17,7 @@
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
-  "homepage": "https://victorbxavier.github.io/urbanviewGo/my-app",
+  "homepage": "https://victorbxavier.github.io/urbanviewGo/my-app/build",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
